# erebos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
.github/: README.md
.github/workflows/: cpp.yml  linux-clang.yml  linux-gcc.yml  macos-clang.yml  test.yml  windows-clang.yml  windows-msvc.yml
cmake/: render-pipeline-shaders.cmake
editor/: CMakeLists.txt
editor/src/: main.cpp
runtime/: CMakeLists.txt
runtime/include/erebos/: result.hpp  unicode.hpp  utils.hpp  window.hpp
runtime/include/erebos/platform/: dynlib.hpp  file.hpp  file_watcher.hpp  platform.hpp
runtime/include/erebos/render/: dxcompiler.hpp  renderer.hpp  shader.hpp
runtime/include/erebos/render/vulkan/: command.hpp  context.hpp  device.hpp  frame.hpp  queue.hpp
runtime/include/erebos/render/vulkan/sync/: fence.hpp  semaphore.hpp
runtime/include/erebos/resource/: resource_manager.hpp
runtime/include/erebos/vulkan/: command.hpp  context.hpp  device.hpp  fence.hpp  frame.hpp  swapchain.hpp
runtime/include/erebos/vulkan/sync/: fence.hpp  semaphore.hpp
runtime/include/libaetherium/: utils.hpp  window.hpp
runtime/include/libaetherium/platform/: dynlib.hpp  file.hpp  file_watcher.hpp  platform.hpp
runtime/include/libaetherium/render/: dxcompiler.hpp  renderer.hpp  shader.hpp
runtime/include/libaetherium/resource/: resource_manager.hpp
runtime/include/libaetherium/vulkan/: command.hpp  context.hpp  device.hpp  fence.hpp  swapchain.hpp
runtime/src/: alloc.cpp  runtime.rpsl  window.cpp
runtime/src/platform/linux/: dynlib.cpp  file.cpp  file_watcher.cpp  platform.cpp
runtime/src/platform/macos/: dynlib.cpp  file.cpp  file_watcher.cpp  platform.cpp
runtime/src/platform/render/: dxcompiler.cpp
runtime/src/platform/resource/: resource_manager.cpp
runtime/src/platform/windows/: dynlib.cpp  file.cpp  file_watcher.cpp  platform.cpp
runtime/src/render/: command.cpp  command.hpp  dxcompiler.cpp  frame.cpp  renderer.cpp  shader.cpp
runtime/src/render/vulkan/: context.cpp  device.cpp
runtime/src/resource/: resource_manager.cpp
runtime/src/vulkan/: command.cpp  context.cpp  device.cpp  fence.cpp  frame.cpp  swapchain.cpp
runtime/src/vulkan/sync/: fence.cpp  semaphore.cpp
runtime/tests/: test_dxcompiler.cpp  test_file.cpp  test_result.cpp  test_unicode.cpp
